--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,14 @@
   --background: #ffffff;
   --foreground: #171717;
 }
+#tsparticles {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
 
 @media (prefers-color-scheme: dark) {
   :root {
