--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
   --background: #ffffff;
   --foreground: #171717;
 }
+/* Background particles */
 #tsparticles {
   position: absolute;
   width: 100%;
